@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2021-XX-XX  Release 7.32.4                                     ---
 ----------------------------------------------------------------------
 
+* fixed overlay support for drawing multiple files - Cliff Yapp
 * fixed file creation for tire command - Cliff Yapp
 * fixed mixing object and full path searches in MGED - Cliff Yapp
 * fixed launching of ISST graphical viewer - Cliff Yapp
